k8s/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: requestflow-frontend
  namespace: requestflow
spec:
  type: ClusterIP
  selector:
    app: requestflow-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestflow-frontend
  namespace: requestflow
spec:
  replicas: 1

  selector:
    matchLabels:
      app: requestflow-frontend

  template:
    metadata:
      labels:
        app: requestflow-frontend

    spec:
      containers:
        - name: frontend
          image: ghcr.io/keith800x/requestflow-frontend:devops
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80

          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 250m
              memory: 128Mi
