k8s/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: requestflow
spec:
  stripPrefix:
    prefixes:
      - /api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: requestflow
  namespace: requestflow
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: requestflow-strip-api-prefix@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - host: requestflow.localhost

      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: requestflow-backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: requestflow-frontend
                port:
                  number: 80
